deployment/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jasmin-sample
  namespace: jasmin-poc
spec:
  type: NodePort
  selector:
    app: jasmin-sample
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
